Resolved 5px shift problem

--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-body, p, ul, li, h1, h2, h3, h4{
+body, p, ul, li, h1, h2, h3, h4, img, div{
 	font-family: 宋体, "Times New Roman", Serif;
 	font-size: 16px;
 	margin: 0;
